# competitive-cpp-template

./: .editorconfig  .gitignore  CMakeLists.txt  copy.bat  copy.sh  main.cpp
vs/: vs.sln  vs.vcxproj  vs.vcxproj.filters
vs/unit-test/: main.h  unit-test.cpp  unit-test.vcxproj  unit-test.vcxproj.filters
